* 2013-10-10 - martin.herfurth@open-xchange.com

 - Fix for bug 29315: Avoid bad where condition

* 2013-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 29136: Do not change session's IP address in case IP-check is turned off and non-white-listed client

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29147: Detect possibly harmful HTML content in image files and force attachment download then

* 2013-09-17 - thorben.betten@open-xchange.com

 - Fix for bug 28770: Once again -- Removed &nbsp; entities from html2text converted plain text

* 2013-09-10 - thorben.betten@open-xchange.com

 - Fix for bug 28741: Orderly close opened 'Base64OutputStream'
 
* 2013-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 28673: Removed the warning on password change that rather acts as information message

* 2013-09-03 - dennis.sieben@open-xchange.com

 - Fix for bug 28658: Removed special handling

* 2013-09-03 - thorben.betten@open-xchange.com

 - Fix for bug 28635: Sanitize HTML content from calendar printing

* 2013-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 28642: Apply sanitizing to text/xml MIME types, too

* 2013-08-30 - thorben.betten@open-xchange.com

 - Fix for bug 28602: Don't close ThresholdFileHolder instance
 - Fix for bug 27866: Handle possible null return value from iCal parse attempt

* 2013-08-23 - thorben.betten@open-xchange.com

 - Fix for bug 28483: Try to recover from "Content-Type" header with empty parameters

* 2013-08-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG

* 2013-08-20 - thorben.betten@open-xchange.com

 - Preparation to fix bug 28163: Don't perform any image transformation if not needed as signaled by URL parameters and/or image type

* 2013-08-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Restrict socket binding to local loopback address only by default, disable Hazelcast's REST and Memcache client 